<resources>
    <string name="action_settings">Settings</string>
    <string name="title_activity_episode_detail">Back</string>
    <string name="title_activity_highlight_detail">Back</string>
    <string name="title_tab_latest">latest</string>
    <string name="title_tab_downloads">downloads</string>
    <string name="title_tab_favorites">favorites</string>
    <string name="title_tab_highlight">highlight</string>
    <string name="title_tab_home">home</string>
    <string name="GENERIC_ERROR">Something went wrong. Please, try again.</string>
    <string name="connection_error">Please, check your internet connection.</string>
    <string name="download_empty_list">Not downloads yet… save some shows now!</string>
    <string name="favorite_empty_list">You currently have no favorites.</string>
    <string name="highlight_empty_list">TODO add text</string>
    <string name="search_empty_list">No results. Try another search.</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="title_tab_settings">Settings</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_tab_summary">Summary</string>
    <string name="title_tab_guest_ist">Guest List</string>
    <string name="title_tab_timeline">Timeline</string>
    <string name="title_tab_options">Options</string>
    <string name="image_description_logo">Logo</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_terms">Back</string>
    <string name="title_activity_search">Search</string>
    <string name="search">Search</string>
    <string name="long_text">Very long text. Very long text. Very long text. Very long text. Very long text. Very long text. Very long text.Very long text. Very long text. Very long text. Very long text. Very long text. Very long text. Very long text.</string>
    <string name="videos_empty">There are no videos in playlist</string>
    <string name="alert_dialog_title_free_space">Free space left</string>
    <string name="alert_dialog_message_free_space">Need to free space up before downloading</string>
    <string name="retry">Retry</string>
    <string name="off">[off]</string>
    <string name="on">[on]</string>
    <string name="drm_error_not_supported">Protected content not supported on API levels below 18</string>
    <string name="drm_error_unsupported_scheme">This device does not support the required DRM scheme</string>
    <string name="drm_error_unknown">An unknown DRM error occurred</string>
    <string name="failed">Playback failed</string>
    <string name="logging_normal">Normal</string>
    <string name="logging_verbose">Verbose</string>
    <string name="enable_background_audio">Play in background</string>
    <string name="alert_dialog_message_transcoded">Video will be available within the next 2 hours.</string>
    <string name="alert_dialog_title_transcoded">Alert</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="content_type_mp4">video/mp4</string>
    <string name="hello_worl">test</string>
    <string name="fragment_name_chromecast">Chromecast fregment</string>
    <string name="cannot_play_youtube">This video can\'t be played on Chromecast.</string>
    <string name="title_activity_live">Live</string>
    <string name="option_download_video">Video</string>
    <string name="option_download_audio">Audio</string>
    <string name="option_play_as_video">Video</string>
    <string name="option_play_as_audio">Audio</string>
    <string name="share_message" formatted="false"><![CDATA[I thought you would enjoy this awesome video %1$s that I watched on %2$s ]]></string>
    <string name="share_message_html" formatted="false"><![CDATA[Check out this awesome clip from %s on <a href="[app_name]">[app_name]</a>  <img here="%s" /> ]]></string>
    <string name="my_link"><a href="http://somesite.com/">Click me!</a></string>
    <string name="dialog_subscribe_title">Please Subscribe</string>
    <string name="dialog_subscribe_message">Please subscribe to get full access to the video!</string>
    <string name="dialog_button_ok">OK</string>
    <string name="download_maxsize_exceeded">Max Downloads folder size exceeded. Please сheck Download Preferences in Settings menu.</string>
    <string name="title_activity_playlist">Back</string>
    <string name="cast_title">Casting...</string>
    <string name="subtitles_dialog_empty">Closed captions are not available for this video</string>
    <string name="subtitles_off">Turn off</string>
    <string name="consumer_button_update">Create account</string>
    <string name="consumer_create_form_description">Enter a valid email and password to create your account. Account credentials will allow access on all devices.</string>
    <string name="consumer_create_form_subtitle">Get all of %1$s!</string>
    <string name="consumer_create_form_title">Create your account</string>
    <string name="consumer_create_sign_in">Already have an account? Sign in</string>
    <string name="consumer_create_sign_in_link">Sign in</string>
    <string name="consumer_create_terms">By clicking Continue, you agree to our Terms of Service and Privacy</string>
    <string name="consumer_create_terms_link">Terms of Service and Privacy</string>
    <string name="consumer_email">Email</string>
    <string name="consumer_email_error_empty">Email is required</string>
    <string name="consumer_email_error_invalid">Enter valid email</string>
    <string name="consumer_error_create">We’re sorry, that email address already belongs to an account.
        Please click Sign In below if you’d like to sign into your existing account.</string>
    <string name="consumer_password">Password</string>
    <string name="consumer_password_error_empty">Enter password</string>
    <string name="consumer_progress_create">Creating account…</string>
    <string name="consumer_title_create">Create Account</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_login_title">Sign In Required</string>
    <string name="dialog_login_message">You do not have access to this video. Please sign in with your account to watch this video.</string>
    <string name="dialog_login_button_login">Sign in</string>
    <string name="dialog_update_app_title">Update your app</string>
    <string name="dialog_update_app_message">You\'ve selected premium content. Please download the latest version of this app in order to purchase access to this content.</string>
    <string name="downloads_empty_title">It looks like you haven’t downloaded any videos yet.</string>
    <string name="downloads_empty_message">You can download videos in order to watch them offline by signing in to your account and clicking on the Download icon for any individual video.</string>
    <string name="favorites_empty_title">It looks like you haven’t added any videos to Favorites yet</string>
    <string name="favorites_empty_message">You can save your favorite videos in this section by clicking on the Favorite star icon for any individual video.</string>
    <string name="gallery_hero_image_error_playlist">We’re sorry, that playlist cannot be found.</string>
    <string name="gallery_hero_image_error_video">We’re sorry, that video cannot be found.</string>
    <string name="gallery_empty_title">There are no videos available</string>
    <string name="gallery_empty_message"> </string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_ok">OK</string>
    <string name="intro_button_browse">Browse</string>
    <string name="intro_button_login">Log in</string>
    <string name="intro_button_trial">Start Free Trial</string>
    <string name="library_empty_title">It looks like you haven’t purchased any content yet.</string>
    <string name="library_empty_message">Once purchased, your library of content will appear in this section.</string>
    <string name="library_signed_out_title">Sign in for access to your library of purchased content.</string>
    <string name="login_button_device_linked">Continue</string>
    <string name="login_button_email">Sign in with email</string>
    <string name="login_button_link_device">Link device</string>
    <string name="login_button_reset">Reset Password</string>
    <string name="login_button_reset_completed">Close and Return</string>
    <string name="login_device_linking_url">From your computer or mobile device visit:</string>
    <string name="login_error_device_id">Error get device id</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_pin">Enter Pin:</string>
    <string name="login_reset_message">Please enter your account email to reset your password</string>
    <string name="login_reset_title">Reset your password</string>
    <string name="login_reset_completed_message">An email with password reset instructions has been sent to your email address, if it exists in our system.</string>
    <string name="login_reset_completed_title">Thank you!</string>
    <string name="login_sign_up">Don\'t have an account? Sign up</string>
    <string name="login_sign_up_link">Sign up</string>
    <string name="login_title">Sign In</string>
    <string name="login_subtitle"></string>
    <string name="main_tab_my_library">My library</string>
    <string name="menu_main_search">Search</string>
    <string name="menu_navigation_downloads">Downloads</string>
    <string name="menu_navigation_favorites">Favorites</string>
    <string name="menu_navigation_home">Home</string>
    <string name="menu_navigation_guide">Guide</string>
    <string name="menu_navigation_library">Library</string>
    <string name="menu_navigation_live">Live</string>
    <string name="menu_navigation_settings">More</string>
    <string name="my_library_error_empty">You have not purchased any videos.\n
        Any videos you purchase will automatically appear in your library.</string>
    <string name="my_library_sign_in">Please sign in to see\nMy library videos</string>
    <string name="entitlement_dialog_error_title">Error</string>
    <string name="notification_channel_name">Zype</string>
    <string name="notification_channel_description">Zype Notification Channel</string>
    <string name="action_buy_video">Buy for $%1$s</string>
    <string name="buy_video_button_back">Go Back</string>
    <string name="buy_video_button_buy">Buy Now</string>
    <string name="buy_video_button_play">Watch Now</string>
    <string name="buy_video_completed_title">Enjoy Your Purchase!</string>
    <string name="buy_video_completed_message">You have been charged $%1$s and will be sent a receipt to your email from the Google Play Store.</string>
    <string name="buy_video_review_title">Review Purchase</string>
    <string name="buy_video_review_message">You will be charged $%1$s for %2$s.</string>
    <string name="buy_video_review_google">You will be billed through the Google Play Store.</string>
    <string name="paywall_button_buy_playlist">Buy all %1$d videos - $%2$s</string>
    <string name="paywall_error_validation">We\'re sorry, there was a problem validating your purchase.</string>
    <string name="paywall_subtitle">Get access to Premium Content across all devices</string>
    <string name="paywall_title">Enjoy %1$s</string>
    <string name="paywall_verifying_purchase">Verifying purchase</string>
    <string name="menu_player_closed_captions">Closed captions</string>
    <string name="search_error_empty_query">Please enter search terms in order to begin a new search.</string>
    <string name="settings">Settings</string>
    <string name="subscribe_or_login_button_restore">Restore Purchases</string>
    <string name="subscribe_or_login_button_subscribe_now">Subscribe Now</string>
    <string name="login_signup_sign_msg">Please sign up or sign into an account in order to watch this video</string>
</resources>