<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuNavigationHome"
        android:title="@string/menu_navigation_home"
        android:icon="@drawable/baseline_home_black_24"
        />

<!--    <item-->
<!--        android:id="@+id/menuNavigationGuide"-->
<!--        android:title="@string/menu_navigation_guide"-->
<!--        android:icon="@drawable/baseline_guide_black"-->
<!--        />-->
<!--    <item-->
<!--        android:id="@+id/menuNavigationLive"-->
<!--        android:title="@string/menu_navigation_live"-->
<!--        android:icon="@drawable/icon_live"-->
<!--        />-->

    <item
        android:id="@+id/menuNavigationFavorites"
        android:title="@string/menu_navigation_favorites"
        android:icon="@drawable/baseline_star_rate_black_24"
        />
    <item
        android:id="@+id/menuNavigationDownloads"
        android:title="@string/menu_navigation_downloads"
        android:icon="@drawable/baseline_cloud_download_black_24"
        />
    <item
        android:id="@+id/menuNavigationSettings"
        android:title="@string/menu_navigation_settings"
        android:icon="@drawable/baseline_settings_black_24"
        />
</menu>