<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    tools:context="com.zype.android.ui.Intro.IntroActivity"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/image_logo"
        />
    <Button
        android:id="@+id/buttonTrial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/intro_button_trial"
        style="@style/Widget.AppCompat.Button.Colored"
        />
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/intro_button_login"
        android:theme="@style/ButtonBorder"
        />
    <Button
        android:id="@+id/buttonBrowse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/intro_button_browse"
        style="?borderlessButtonStyle"
        android:textColor="?attr/colorAccent"
        />

</LinearLayout>
